@@ -5,16 +5,23 @@ import com.google.common.collect.Lists;
 import htsjdk.samtools.Cigar;
 import htsjdk.samtools.CigarOperator;
 import htsjdk.samtools.SAMFileHeader;
+import htsjdk.samtools.util.Locatable;
+import htsjdk.variant.variantcontext.VariantContext;
+import htsjdk.variant.variantcontext.writer.VariantContextWriter;
+import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.broadinstitute.gatk.nativebindings.smithwaterman.SWOverhangStrategy;
+import org.broadinstitute.gatk.nativebindings.smithwaterman.SWParameters;
 import org.broadinstitute.hellbender.engine.AssemblyRegion;
 import org.broadinstitute.hellbender.exceptions.UserException;
 import org.broadinstitute.hellbender.tools.walkers.haplotypecaller.AssemblyResult;
 import org.broadinstitute.hellbender.tools.walkers.haplotypecaller.AssemblyResultSet;
+import org.broadinstitute.hellbender.tools.walkers.haplotypecaller.LongHomopolymerHaplotypeCollapsingEngine;
 import org.broadinstitute.hellbender.tools.walkers.haplotypecaller.ReadErrorCorrector;
 import org.broadinstitute.hellbender.tools.walkers.haplotypecaller.graphs.*;
 import org.broadinstitute.hellbender.utils.Histogram;
+import org.broadinstitute.hellbender.utils.IntervalUtils;
 import org.broadinstitute.hellbender.utils.SimpleInterval;
 import org.broadinstitute.hellbender.utils.Utils;
 import org.broadinstitute.hellbender.utils.clipping.ReadClipper;
@@ -62,9 +69,9 @@ public final class ReadThreadingAssembler {
     private boolean recoverDanglingBranches = true;
     private boolean recoverAllDanglingBranches = false;
     private int minDanglingBranchLength = 0;
-    
-    protected byte minBaseQualityToUseInAssembly = DEFAULT_MIN_BASE_QUALITY_TO_USE;
-    private int pruneFactor;
+
+    private byte minBaseQualityToUseInAssembly = DEFAULT_MIN_BASE_QUALITY_TO_USE;
+    private final int pruneFactor;
     private final ChainPruner<MultiDeBruijnVertex, MultiSampleEdge> chainPruner;
     private int minMatchingBasesToDanglingEndRecovery;
 
@@ -79,7 +86,8 @@ public final class ReadThreadingAssembler {
                                   final int numPruningSamples, final int pruneFactor, final boolean useAdaptivePruning,
                                   final double initialErrorRateForPruning, final double pruningLogOddsThreshold,
                                   final double pruningSeedingLogOddsThreshold, final int maxUnprunedVariants, final boolean useLinkedDebruijnGraphs,
-                                  final boolean enableLegacyGraphCycleDetection, final int minMachingBasesToDanglngEndRecovery) {
+                                  final boolean enableLegacyGraphCycleDetection,
+                                  final int minMatchingBasesToDanglingEndRecovery) {
         Utils.validateArg( maxAllowedPathsForReadThreadingAssembler >= 1, "numBestHaplotypesPerGraph should be >= 1 but got " + maxAllowedPathsForReadThreadingAssembler);
         this.kmerSizes = kmerSizes.stream().sorted(Integer::compareTo).collect(Collectors.toList());
         this.dontIncreaseKmerSizesForCycles = dontIncreaseKmerSizesForCycles;
@@ -95,7 +103,7 @@ public final class ReadThreadingAssembler {
         chainPruner = useAdaptivePruning ? new AdaptiveChainPruner<>(initialErrorRateForPruning, pruningLogOddsThreshold, pruningSeedingLogOddsThreshold, maxUnprunedVariants) :
                 new LowWeightChainPruner<>(pruneFactor);
         numBestHaplotypesPerGraph = maxAllowedPathsForReadThreadingAssembler;
-        this.minMatchingBasesToDanglingEndRecovery = minMachingBasesToDanglngEndRecovery;
+        this.minMatchingBasesToDanglingEndRecovery = minMatchingBasesToDanglingEndRecovery;
     }
 
     @VisibleForTesting
@@ -105,7 +113,7 @@ public final class ReadThreadingAssembler {
 
     @VisibleForTesting
     ReadThreadingAssembler() {
-        this(DEFAULT_NUM_PATHS_PER_GRAPH, Arrays.asList(25), 2);
+        this(DEFAULT_NUM_PATHS_PER_GRAPH, List.of(25), 2);
     }
 
     // this method should not be used, only exposed for testing purposes. This should be set in the constructor.
@@ -121,7 +129,10 @@ public final class ReadThreadingAssembler {
      * @param fullReferenceWithPadding  byte array holding the reference sequence with padding
      * @param refLoc                    GenomeLoc object corresponding to the reference sequence with padding
      * @param readErrorCorrector        a ReadErrorCorrector object, if read are to be corrected before assembly. Can be null if no error corrector is to be used.
-     * @param aligner                   {@link SmithWatermanAligner} used to align dangling ends in assembly graphs to the reference sequence
+     * @param aligner                   {@link SmithWatermanAligner} used to align dangling ends and haplotypes to the reference sequence
+     * @param haplotypeCollapsing       an optional engine for handling long hmer collapsing (used only inflow mode)
+     * @param danglingEndSWParameters   {@link SWParameters} used to align dangling ends to the reference sequence
+     * @param haplotypeToReferenceSWParameters  {@link SWParameters} used to align haplotypes to the reference sequence
      * @return                          the resulting assembly-result-set
      */
     public AssemblyResultSet runLocalAssembly(final AssemblyRegion assemblyRegion,
@@ -130,7 +141,10 @@ public final class ReadThreadingAssembler {
                                               final SimpleInterval refLoc,
                                               final ReadErrorCorrector readErrorCorrector,
                                               final SAMFileHeader header,
-                                              final SmithWatermanAligner aligner) {
+                                              final SmithWatermanAligner aligner,
+                                              final LongHomopolymerHaplotypeCollapsingEngine haplotypeCollapsing,
+                                              final SWParameters danglingEndSWParameters,
+                                              final SWParameters haplotypeToReferenceSWParameters) {
         Utils.nonNull(assemblyRegion, "Assembly engine cannot be used with a null AssemblyRegion.");
         Utils.nonNull(assemblyRegion.getPaddedSpan(), "Active region must have an extended location.");
         Utils.nonNull(refHaplotype, "Reference haplotype cannot be null.");
@@ -144,10 +158,13 @@ public final class ReadThreadingAssembler {
         List<GATKRead> correctedReads = readErrorCorrector == null ? assemblyRegion.getReads() : readErrorCorrector.correctReads(assemblyRegion.getReads());
 
         // Revert clipped bases if necessary (since we do not want to assemble them)
-        correctedReads = correctedReads.stream().map(r -> ReadClipper.hardClipSoftClippedBases(r)).collect(Collectors.toList());
+        correctedReads = correctedReads.stream().map(ReadClipper::hardClipSoftClippedBases).collect(Collectors.toList());
 
         final List<AbstractReadThreadingGraph> nonRefRTGraphs = new LinkedList<>();
         final List<SeqGraph> nonRefSeqGraphs = new LinkedList<>();
+        if ( haplotypeCollapsing != null ) {
+            logger.debug("starting runLocalAssembly with haplotypeCollapsing: " + haplotypeCollapsing);
+        }
         final AssemblyResultSet resultSet = new AssemblyResultSet();
         resultSet.setRegionForGenotyping(assemblyRegion);
         resultSet.setFullReferenceWithPadding(fullReferenceWithPadding);
@@ -155,16 +172,18 @@ public final class ReadThreadingAssembler {
         final SimpleInterval activeRegionExtendedLocation = assemblyRegion.getPaddedSpan();
         refHaplotype.setGenomeLocation(activeRegionExtendedLocation);
         resultSet.add(refHaplotype);
+        resultSet.setHaplotypeCollapsingEngine(haplotypeCollapsing);
+
         // either follow the old method for building graphs and then assembling or assemble and haplotype call before expanding kmers
         if (generateSeqGraph) {
-            assembleKmerGraphsAndHaplotypeCall(refHaplotype, refLoc, header, aligner,
-                    correctedReads, nonRefSeqGraphs, resultSet, activeRegionExtendedLocation);
+            assembleKmerGraphsAndHaplotypeCall(refHaplotype, refLoc, header, aligner, danglingEndSWParameters,
+                    haplotypeToReferenceSWParameters, correctedReads, nonRefSeqGraphs, resultSet, activeRegionExtendedLocation);
         } else {
             assembleGraphsAndExpandKmersGivenHaplotypes(refHaplotype, refLoc, header, aligner,
-                    correctedReads, nonRefRTGraphs, resultSet, activeRegionExtendedLocation);
+                    danglingEndSWParameters, haplotypeToReferenceSWParameters, correctedReads, nonRefRTGraphs, resultSet, activeRegionExtendedLocation);
         }
 
-        // If we get to this point then no graph worked... thats bad and indicates something horrible happened, in this case we just return a reference haplotype
+        // If we get to this point then no graph worked... that's bad and indicates something horrible happened, in this case we just return a reference haplotype
         if (resultSet.getHaplotypeList().isEmpty()) {
             logger.debug("Graph at position "+resultSet.getPaddedReferenceLoc()+" failed to assemble anything informative; emitting just the reference here" );
         }
@@ -183,16 +202,16 @@ public final class ReadThreadingAssembler {
     }
 
     /**
-     * Follow the old behavior, call into {@link #assemble(List, Haplotype, SAMFileHeader, SmithWatermanAligner)} to decide if a graph
+     * Follow the old behavior, call into {@link #assemble(List, Haplotype, SAMFileHeader, SmithWatermanAligner, SWParameters)} to decide if a graph
      * is acceptable for haplotype discovery then detect haplotypes.
      */
     private void assembleKmerGraphsAndHaplotypeCall(final Haplotype refHaplotype, final SimpleInterval refLoc, final SAMFileHeader header,
-                                                    final SmithWatermanAligner aligner, final List<GATKRead> correctedReads,
+                                                    final SmithWatermanAligner aligner, final SWParameters danglingEndSWParameters, final SWParameters haplotypeToReferenceSWParameters, final List<GATKRead> correctedReads,
                                                     final List<SeqGraph> nonRefSeqGraphs, final AssemblyResultSet resultSet,
                                                     final SimpleInterval activeRegionExtendedLocation) {
         final Map<SeqGraph,AssemblyResult> assemblyResultBySeqGraph = new HashMap<>();
         // create the graphs by calling our subclass assemble method
-        for ( final AssemblyResult result : assemble(correctedReads, refHaplotype, header, aligner) ) {
+        for ( final AssemblyResult result : assemble(correctedReads, refHaplotype, header, aligner, danglingEndSWParameters) ) {
             if ( result.getStatus() == AssemblyResult.Status.ASSEMBLED_SOME_VARIATION ) {
                 // do some QC on the graph
                 sanityCheckGraph(result.getSeqGraph(), refHaplotype);
@@ -207,20 +226,18 @@ public final class ReadThreadingAssembler {
         }
 
         // add assembled alt haplotypes to the {@code resultSet}
-        findBestPaths(nonRefSeqGraphs, assemblyResultBySeqGraph, refHaplotype, refLoc, activeRegionExtendedLocation, resultSet, aligner);
+        findBestPaths(nonRefSeqGraphs, assemblyResultBySeqGraph, refHaplotype, refLoc, activeRegionExtendedLocation, resultSet, aligner, haplotypeToReferenceSWParameters);
     }
 
     /**
-     * Follow the kmer expansion heurisics as {@link #assemble(List, Haplotype, SAMFileHeader, SmithWatermanAligner)}, but in this case
+     * Follow the kmer expansion heuristics as {@link #assemble(List, Haplotype, SAMFileHeader, SmithWatermanAligner, SWParameters)}, but in this case
      * attempt to recover haplotypes from the kmer graph and use them to assess whether to expand the kmer size.
      */
     private void assembleGraphsAndExpandKmersGivenHaplotypes(final Haplotype refHaplotype, final SimpleInterval refLoc, final SAMFileHeader header,
-                                                             final SmithWatermanAligner aligner, final List<GATKRead> correctedReads,
+                                                             final SmithWatermanAligner aligner, final SWParameters danglingEndSWParameters, final SWParameters haplotypeToReferenceSWParameters, final List<GATKRead> correctedReads,
                                                              final List<AbstractReadThreadingGraph> nonRefRTGraphs, final AssemblyResultSet resultSet,
                                                              final SimpleInterval activeRegionExtendedLocation) {
-        final Map<AbstractReadThreadingGraph,AssemblyResult> assemblyResultByRTGraph = new HashMap<>();
         // create the graphs by calling our subclass assemble method
-
         final List<AssemblyResult> savedAssemblyResults = new ArrayList<>();
 
         boolean hasAdequatelyAssembledGraph = false;
@@ -230,13 +247,12 @@ public final class ReadThreadingAssembler {
             final int kmerSize = kmersToTry.get(i);
             final boolean isLastCycle = i == kmersToTry.size() - 1;
             if (!hasAdequatelyAssembledGraph) {
-                AssemblyResult assembledResult = createGraph(correctedReads, refHaplotype, kmerSize, isLastCycle || dontIncreaseKmerSizesForCycles, isLastCycle || allowNonUniqueKmersInRef, header, aligner);
+                AssemblyResult assembledResult = createGraph(correctedReads, refHaplotype, kmerSize, isLastCycle || dontIncreaseKmerSizesForCycles, isLastCycle || allowNonUniqueKmersInRef, header, aligner, danglingEndSWParameters);
                 if (assembledResult != null && assembledResult.getStatus() == AssemblyResult.Status.ASSEMBLED_SOME_VARIATION) {
                     // do some QC on the graph
                     sanityCheckGraph(assembledResult.getThreadingGraph(), refHaplotype);
-                    assembledResult.getThreadingGraph().postProcessForHaplotypeFinding(debugGraphOutputPath, refHaplotype.getLocation());
+                    assembledResult.getThreadingGraph().postProcessForHaplotypeFinding(debugGraphOutputPath, refHaplotype);
                     // add it to graphs with meaningful non-reference features
-                    assemblyResultByRTGraph.put(assembledResult.getThreadingGraph(), assembledResult);
                     nonRefRTGraphs.add(assembledResult.getThreadingGraph());
 
                     if (graphHaplotypeHistogramPath != null) {
@@ -245,7 +261,7 @@ public final class ReadThreadingAssembler {
 
                     AbstractReadThreadingGraph graph = assembledResult.getThreadingGraph();
                     findBestPaths(Collections.singletonList(graph), Collections.singletonMap(graph, assembledResult),
-                            refHaplotype, refLoc, activeRegionExtendedLocation, null, aligner);
+                            refHaplotype, refLoc, activeRegionExtendedLocation, null, aligner, haplotypeToReferenceSWParameters);
 
                     savedAssemblyResults.add(assembledResult);
 
@@ -253,9 +269,9 @@ public final class ReadThreadingAssembler {
                     //TODO                 - but if we failed to assemble due to excessive looping or did have badly assembled haplotypes then we expand kmer size.
                     //TODO                 - If we get no variation
 
-                    // if asssembly didn't fail ( which is a degenerate case that occurs for some subset of graphs with difficult loops)
-                    if (! savedAssemblyResults.get(savedAssemblyResults.size() - 1).getDiscoveredHaplotypes().isEmpty()) {
-                        // we have found our workable kmer size so lets add the results and finish
+                    // if assembly didn't fail ( which is a degenerate case that occurs for some subset of graphs with difficult loops)
+                    if (! assembledResult.getDiscoveredHaplotypes().isEmpty()) {
+                        // we have found our workable kmer size so let's add the results and finish
                         if (!assembledResult.containsSuspectHaplotypes()) {
                             for (Haplotype h : assembledResult.getDiscoveredHaplotypes()) {
                                 resultSet.add(h, assembledResult);
@@ -264,7 +280,7 @@ public final class ReadThreadingAssembler {
                         }
                     }
 
-                // if no variation is discoverd in the graph don't bother expanding the kmer size.
+                // if no variation is discovered in the graph don't bother expanding the kmer size.
                 } else if (assembledResult != null && assembledResult.getStatus() == AssemblyResult.Status.JUST_ASSEMBLED_REFERENCE) {
                     hasAdequatelyAssembledGraph = true;
                 }
@@ -290,7 +306,7 @@ public final class ReadThreadingAssembler {
     /**
      * Find discover paths by using KBestHaplotypeFinder over each graph.
      *
-     * This method has the side effect that it will annotate all of the AssemblyResults objects with the derived haplotypes
+     * This method has the side effect that it will annotate all the AssemblyResults objects with the derived haplotypes
      * which can be used for basing kmer graph pruning on the discovered haplotypes.
      *
      * @param graphs                graphs to be used for kmer detection
@@ -299,32 +315,34 @@ public final class ReadThreadingAssembler {
      * @param refLoc                location of reference haplotype
      * @param activeRegionWindow    window of the active region (without padding)
      * @param resultSet             (can be null) the results set into which to deposit discovered haplotypes
-     * @param aligner               SmithWaterman aligner to use for aligning the discovered haplotype to the reference haplotype
-     * @return A list of discovered haplotyes (note that this is not currently used for anything)
+     * @param aligner               {@link SmithWatermanAligner} to use for aligning the discovered haplotype to the reference haplotype
+     * @param haplotypeToReferenceSWParameters {@link SWParameters} to use for aligning the discovered haplotype to the reference haplotype
+     * @return A list of discovered haplotypes (note that this is not currently used for anything)
      */
     @SuppressWarnings({"unchecked"})
     private <V extends  BaseVertex, E extends BaseEdge, T extends BaseGraph<V, E>>
     List<Haplotype> findBestPaths(final Collection<T> graphs, final Map<T, AssemblyResult> assemblyResultByGraph,
                                   final Haplotype refHaplotype, final SimpleInterval refLoc, final SimpleInterval activeRegionWindow,
-                                  final AssemblyResultSet resultSet, final SmithWatermanAligner aligner) {
+                                  final AssemblyResultSet resultSet, final SmithWatermanAligner aligner, final SWParameters haplotypeToReferenceSWParameters) {
         // add the reference haplotype separately from all the others to ensure that it is present in the list of haplotypes
-        final Set<Haplotype> returnHaplotypes = new LinkedHashSet<>();
+        Set<Haplotype> returnHaplotypes = new LinkedHashSet<>();
 
         final int activeRegionStart = refHaplotype.getAlignmentStartHapwrtRef();
         int failedCigars = 0;
 
         // Validate that the graph is valid with extant source and sink before operating
-        for( final BaseGraph<V, E> graph : graphs ) {
+        for (final BaseGraph<V, E> graph : graphs) {
             final AssemblyResult assemblyResult = assemblyResultByGraph.get(graph);
             final V source = graph.getReferenceSourceVertex();
             final V sink = graph.getReferenceSinkVertex();
             Utils.validateArg(source != null && sink != null, () -> "Both source and sink cannot be null but got " + source + " and sink " + sink + " for graph " + graph);
 
-            for (final KBestHaplotype<V, E> kBestHaplotype :
-                    (generateSeqGraph ?
-                            new GraphBasedKBestHaplotypeFinder<>(graph, source, sink) :
-                            new JunctionTreeKBestHaplotypeFinder<>(graph, source, sink, JunctionTreeKBestHaplotypeFinder.DEFAULT_OUTGOING_JT_EVIDENCE_THRESHOLD_TO_BELEIVE, recoverHaplotypesFromEdgesNotCoveredInJunctionTrees))
-                            .findBestHaplotypes(numBestHaplotypesPerGraph)) {
+            List<KBestHaplotype<V, E>> bestHaplotypes = (generateSeqGraph ?
+                    new GraphBasedKBestHaplotypeFinder<>(graph, source, sink) :
+                    new JunctionTreeKBestHaplotypeFinder<>(graph, source, sink, JunctionTreeKBestHaplotypeFinder.DEFAULT_OUTGOING_JT_EVIDENCE_THRESHOLD_TO_BELEIVE, recoverHaplotypesFromEdgesNotCoveredInJunctionTrees))
+                    .findBestHaplotypes(numBestHaplotypesPerGraph);
+
+            for (final KBestHaplotype<V, E> kBestHaplotype : bestHaplotypes) {
                 // TODO for now this seems like the solution, perhaps in the future it will be to excise the haplotype completely)
                 if (kBestHaplotype instanceof JTBestHaplotype && ((JTBestHaplotype<V, E>) kBestHaplotype).isWasPoorlyRecovered()) {
                     assemblyResult.setContainsSuspectHaplotypes(true);
@@ -337,7 +355,7 @@ public final class ReadThreadingAssembler {
                     if (kBestHaplotype.isReference()) {
                         refHaplotype.setScore(kBestHaplotype.score());
                     }
-                    final Cigar cigar = CigarUtils.calculateCigar(refHaplotype.getBases(), h.getBases(), aligner, SWOverhangStrategy.SOFTCLIP);
+                    final Cigar cigar = CigarUtils.calculateCigar(refHaplotype.getBases(), h.getBases(), aligner, haplotypeToReferenceSWParameters, SWOverhangStrategy.SOFTCLIP);
 
                     if (cigar == null) {
                         failedCigars++; // couldn't produce a meaningful alignment of haplotype to reference, fail quietly
@@ -349,7 +367,7 @@ public final class ReadThreadingAssembler {
                         // N cigar elements means that a bubble was too divergent from the reference so skip over this path
                         continue;
                     } else if (cigar.getReferenceLength() != refHaplotype.getCigar().getReferenceLength()) { // SW failure
-                        final Cigar cigarWithIndelStrategy = CigarUtils.calculateCigar(refHaplotype.getBases(), h.getBases(), aligner, SWOverhangStrategy.INDEL);
+                        final Cigar cigarWithIndelStrategy = CigarUtils.calculateCigar(refHaplotype.getBases(), h.getBases(), aligner, haplotypeToReferenceSWParameters, SWOverhangStrategy.INDEL);
                         // the SOFTCLIP strategy can produce a haplotype cigar that matches the beginning of the reference and
                         // skips the latter part of the reference.  For example, when padded haplotype = NNNNNNNNNN[sequence 1]NNNNNNNNNN
                         // and padded ref = NNNNNNNNNN[sequence 1][sequence 2]NNNNNNNNNN, the alignment may choose to align only sequence 1.
@@ -387,10 +405,22 @@ public final class ReadThreadingAssembler {
             // Make sure that the ref haplotype is amongst the return haplotypes and calculate its score as
             // the first returned by any finder.
             // HERE we want to preserve the signal that assembly failed completely so in this case we don't add anything to the empty list
-            if (!returnHaplotypes.isEmpty() && !returnHaplotypes.contains(refHaplotype)) {
-                returnHaplotypes.add(refHaplotype);
-            }
 
+            // downstream uncollapsing code needs to have a haplotype that is marked as reference that will be used to compare other haplotypes
+            // also uncollapsing code removes duplicated haplotypes (that become identical after uncollapsing) and needs to make sure that
+            // the reference haplotype is not removed after.
+            // thus we search for reference haplotype and mark it as reference
+            Haplotype tmpRefHaplotype = new Haplotype(refHaplotype.getBases(), false);
+            if (!returnHaplotypes.isEmpty()) {
+                if (returnHaplotypes.contains((tmpRefHaplotype))) {
+                    returnHaplotypes.remove(tmpRefHaplotype);
+                }
+                returnHaplotypes.add(refHaplotype);
+
+                if (resultSet != null) {
+                    resultSet.replaceAllHaplotypes(returnHaplotypes);
+                }
+            }
             assemblyResult.setDiscoveredHaplotypes(returnHaplotypes);
         }
 
@@ -412,6 +442,7 @@ public final class ReadThreadingAssembler {
 
         return new ArrayList<>(returnHaplotypes);
     }
+
     /**
      * We use CigarOperator.N as the signal that an incomplete or too divergent bubble was found during bubble traversal
      * @param c the cigar to test
@@ -419,21 +450,6 @@ public final class ReadThreadingAssembler {
      */
     private static boolean pathIsTooDivergentFromReference(final Cigar c) {
         return c.getCigarElements().stream().anyMatch(ce -> ce.getOperator() == CigarOperator.N);
-    }
-
-    /**
-     * Print graph to file NOTE this requires that debugGraphTransformations be enabled.
-     *
-     * @param graph the graph to print
-     * @param fileName the name to give the graph file
-     */
-    private void printDebugGraphTransform(final BaseGraph<?,?> graph, final String fileName) {
-        File outputFile = new File(debugGraphOutputPath, fileName);
-        if ( PRINT_FULL_GRAPH_FOR_DEBUGGING ) {
-            graph.printGraph(outputFile, pruneFactor);
-        } else {
-            graph.subsetToRefSource(10).printGraph(outputFile, pruneFactor);
-        }
     }
 
     private AssemblyResult getResultSetForRTGraph(final AbstractReadThreadingGraph rtGraph) {
@@ -449,27 +465,20 @@ public final class ReadThreadingAssembler {
     }
 
     // Performs the various transformations necessary on a sequence graph
-    private AssemblyResult cleanupSeqGraph(final SeqGraph seqGraph, final Haplotype refHaplotype) {
-        if (debugGraphTransformations) {
-            printDebugGraphTransform(seqGraph, refHaplotype.getLocation() + "-sequenceGraph."+seqGraph.getKmerSize()+".1.0.non_ref_removed.dot");
-        }
+    private AssemblyResult cleanupSeqGraph(final SeqGraph seqGraph, final DotFilePrinter dotFilePrinter) {
+        dotFilePrinter.saveGraphIfDebugEnabled(seqGraph, "non_ref_removed");
+
         // the very first thing we need to do is zip up the graph, or pruneGraph will be too aggressive
         seqGraph.zipLinearChains();
-        if (debugGraphTransformations) {
-            printDebugGraphTransform(seqGraph, refHaplotype.getLocation() + "-sequenceGraph."+seqGraph.getKmerSize()+".1.1.zipped.dot");
-        }
+        dotFilePrinter.saveGraphIfDebugEnabled(seqGraph, "zipped");
 
         // now go through and prune the graph, removing vertices no longer connected to the reference chain
         seqGraph.removeSingletonOrphanVertices();
         seqGraph.removeVerticesNotConnectedToRefRegardlessOfEdgeDirection();
+        dotFilePrinter.saveGraphIfDebugEnabled(seqGraph, "pruned");
 
-        if (debugGraphTransformations) {
-            printDebugGraphTransform(seqGraph, refHaplotype.getLocation() + "-sequenceGraph."+seqGraph.getKmerSize()+".1.2.pruned.dot");
-        }
         seqGraph.simplifyGraph();
-        if (debugGraphTransformations) {
-            printDebugGraphTransform(seqGraph, refHaplotype.getLocation() + "-sequenceGraph."+seqGraph.getKmerSize()+".1.3.merged.dot");
-        }
+        dotFilePrinter.saveGraphIfDebugEnabled(seqGraph, "merged");
 
         // The graph has degenerated in some way, so the reference source and/or sink cannot be id'd.  Can
         // happen in cases where for example the reference somehow manages to acquire a cycle, or
@@ -489,9 +498,8 @@ public final class ReadThreadingAssembler {
             seqGraph.addVertex(dummy);
             seqGraph.addEdge(complete, dummy, new BaseEdge(true, 0));
         }
-        if (debugGraphTransformations) {
-            printDebugGraphTransform(seqGraph, refHaplotype.getLocation() + "-sequenceGraph."+seqGraph.getKmerSize()+".1.4.final.dot");
-        }
+        dotFilePrinter.saveGraphIfDebugEnabled(seqGraph, "final");
+
         return new AssemblyResult(AssemblyResult.Status.ASSEMBLED_SOME_VARIATION, seqGraph, null);
     }
 
@@ -538,15 +546,16 @@ public final class ReadThreadingAssembler {
      * @param reads the reads we're going to assemble
      * @param refHaplotype the reference haplotype
      * @param aligner {@link SmithWatermanAligner} used to align dangling ends in assembly graphs to the reference sequence
+     * @param danglingEndSWParameters {@link SWParameters} used to align dangling ends in assembly graphs to the reference sequence
      * @return a non-null list of reads
      */
     @VisibleForTesting
-    List<AssemblyResult> assemble(final List<GATKRead> reads, final Haplotype refHaplotype, final SAMFileHeader header, final SmithWatermanAligner aligner) {
+    List<AssemblyResult> assemble(final List<GATKRead> reads, final Haplotype refHaplotype, final SAMFileHeader header, final SmithWatermanAligner aligner, final SWParameters danglingEndSWParameters) {
         final List<AssemblyResult> results = new LinkedList<>();
 
         // first, try using the requested kmer sizes
         for ( final int kmerSize : kmerSizes ) {
-            addResult(results, createGraph(reads, refHaplotype, kmerSize, dontIncreaseKmerSizesForCycles, allowNonUniqueKmersInRef, header, aligner));
+            addResult(results, createGraph(reads, refHaplotype, kmerSize, dontIncreaseKmerSizesForCycles, allowNonUniqueKmersInRef, header, aligner, danglingEndSWParameters));
         }
 
         // if none of those worked, iterate over larger sizes if allowed to do so
@@ -556,7 +565,7 @@ public final class ReadThreadingAssembler {
             while ( results.isEmpty() && numIterations <= MAX_KMER_ITERATIONS_TO_ATTEMPT ) {
                 // on the last attempt we will allow low complexity graphs
                 final boolean lastAttempt = numIterations == MAX_KMER_ITERATIONS_TO_ATTEMPT;
-                addResult(results, createGraph(reads, refHaplotype, kmerSize, lastAttempt, lastAttempt, header, aligner));
+                addResult(results, createGraph(reads, refHaplotype, kmerSize, lastAttempt, lastAttempt, header, aligner, danglingEndSWParameters));
                 kmerSize += KMER_SIZE_ITERATION_INCREASE;
                 numIterations++;
             }
@@ -566,8 +575,7 @@ public final class ReadThreadingAssembler {
     }
 
     /**
-     * Method for getting a list of all of the specified kmer sizes to test for the graph including kmer expansions
-     * @return
+     * Method for getting a list of all the specified kmer sizes to test for the graph including kmer expansions
      */
     List<Integer> getExpandedKmerList() {
         List<Integer> returnList = new ArrayList<>(kmerSizes);
@@ -596,6 +604,7 @@ public final class ReadThreadingAssembler {
      * @param allowLowComplexityGraphs if true, do not check for low-complexity graphs
      * @param allowNonUniqueKmersInRef if true, do not fail if the reference has non-unique kmers
      * @param aligner {@link SmithWatermanAligner} used to align dangling ends to the reference sequence
+     * @param danglingEndSWParameters {@link SWParameters} used to align dangling ends to the reference sequence
      * @return sequence graph or null if one could not be created (e.g. because it contains cycles or too many paths or is low complexity)
      */
     private AssemblyResult createGraph(final Iterable<GATKRead> reads,
@@ -604,16 +613,20 @@ public final class ReadThreadingAssembler {
                                        final boolean allowLowComplexityGraphs,
                                        final boolean allowNonUniqueKmersInRef,
                                        final SAMFileHeader header,
-                                       final SmithWatermanAligner aligner) {
+                                       final SmithWatermanAligner aligner,
+                                       final SWParameters danglingEndSWParameters) {
         if ( refHaplotype.length() < kmerSize ) {
             // happens in cases where the assembled region is just too small
             return new AssemblyResult(AssemblyResult.Status.FAILED, null, null);
         }
 
-        if ( !allowNonUniqueKmersInRef && !ReadThreadingGraph.determineNonUniqueKmers(new ReadThreadingGraph.SequenceForKmers("ref", refHaplotype.getBases(), 0, refHaplotype.getBases().length, 1, true), kmerSize).isEmpty() ) {
-            if ( debug ) {
-                logger.info("Not using kmer size of " + kmerSize + " in read threading assembler because reference contains non-unique kmers");
-            }
+        final DotFilePrinter dotFilePrinter = new DotFilePrinter(refHaplotype.getGenomeLocation(), kmerSize);
+
+        if ( !allowNonUniqueKmersInRef && !ReadThreadingGraph.determineNonUniqueKmers(
+                new ReadThreadingGraph.SequenceForKmers("ref", refHaplotype.getBases(), 0,
+                        refHaplotype.getBases().length, 1, true), kmerSize).isEmpty() ) {
+            logDebugNotUsingKmerSize(debug, kmerSize);
+
             return null;
         }
 
@@ -624,7 +637,7 @@ public final class ReadThreadingAssembler {
         rtgraph.setThreadingStartOnlyAtExistingVertex(!recoverDanglingBranches);
 
         // add the reference sequence to the graph
-        rtgraph.addSequence("ref", refHaplotype.getBases(), true);
+        rtgraph.addSequence("ref", refHaplotype.getBases(), 1, true);
 
         // Next pull kmers out of every read and throw them on the graph
         for( final GATKRead read : reads ) {
@@ -633,10 +646,7 @@ public final class ReadThreadingAssembler {
 
         // actually build the read threading graph
         rtgraph.buildGraphIfNecessary();
-
-        if (debugGraphTransformations) {
-            printDebugGraphTransform(rtgraph, refHaplotype.getLocation() + "-sequenceGraph." + kmerSize + ".0.0.raw_readthreading_graph.dot");
-        }
+        dotFilePrinter.saveGraphIfDebugEnabled(rtgraph, "raw_readthreading_graph");
 
         // It's important to prune before recovering dangling ends so that we don't waste time recovering bad ends.
         // It's also important to prune before checking for cycles so that sequencing errors don't create false cycles
@@ -647,21 +657,17 @@ public final class ReadThreadingAssembler {
 
         // sanity check: make sure there are no cycles in the graph, unless we are in experimental mode
         if ( generateSeqGraph && rtgraph.hasCycles() ) {
-            if ( debug ) {
-                logger.info("Not using kmer size of " + kmerSize + " in read threading assembler because it contains a cycle");
-            }
+            logDebugNotUsingKmerSize(debug, kmerSize);
             return null;
         }
 
         // sanity check: make sure the graph had enough complexity with the given kmer
         if ( ! allowLowComplexityGraphs && rtgraph.isLowQualityGraph() ) {
-            if ( debug ) {
-                logger.info("Not using kmer size of " + kmerSize + " in read threading assembler because it does not produce a graph with enough complexity");
-            }
+            logDebugNotUsingKmerSize(debug, kmerSize);
             return null;
         }
 
-        final AssemblyResult result = getAssemblyResult(refHaplotype, kmerSize, rtgraph, aligner);
+        final AssemblyResult result = getAssemblyResult(rtgraph, aligner, danglingEndSWParameters, dotFilePrinter);
         // check whether recovering dangling ends created cycles
         if (recoverAllDanglingBranches && rtgraph.hasCycles()) {
             return null;
@@ -669,20 +675,18 @@ public final class ReadThreadingAssembler {
         return result;
     }
 
-    private AssemblyResult getAssemblyResult(final Haplotype refHaplotype, final int kmerSize, final AbstractReadThreadingGraph rtgraph, final SmithWatermanAligner aligner) {
+    private AssemblyResult getAssemblyResult(final AbstractReadThreadingGraph rtgraph, final SmithWatermanAligner aligner, final SWParameters danglingEndSWParameters, final DotFilePrinter dotFilePrinter) {
         if (!pruneBeforeCycleCounting) {
             chainPruner.pruneLowWeightChains(rtgraph);
         }
 
-        if (debugGraphTransformations) {
-            printDebugGraphTransform(rtgraph, refHaplotype.getLocation() + "-sequenceGraph." + kmerSize + ".0.1.chain_pruned_readthreading_graph.dot");
-        }
+        dotFilePrinter.saveGraphIfDebugEnabled(rtgraph, "chain_pruned_readthreading_graph");
 
         // look at all chains in the graph that terminate in a non-ref node (dangling sources and sinks) and see if
         // we can recover them by merging some N bases from the chain back into the reference
         if ( recoverDanglingBranches ) {
-            rtgraph.recoverDanglingTails(pruneFactor, minDanglingBranchLength, recoverAllDanglingBranches, aligner);
-            rtgraph.recoverDanglingHeads(pruneFactor, minDanglingBranchLength, recoverAllDanglingBranches, aligner);
+            rtgraph.recoverDanglingTails(pruneFactor, minDanglingBranchLength, recoverAllDanglingBranches, aligner, danglingEndSWParameters);
+            rtgraph.recoverDanglingHeads(pruneFactor, minDanglingBranchLength, recoverAllDanglingBranches, aligner, danglingEndSWParameters);
         }
 
         // remove all heading and trailing paths
@@ -690,44 +694,34 @@ public final class ReadThreadingAssembler {
             rtgraph.removePathsNotConnectedToRef();
         }
 
-        if (debugGraphTransformations) {
-            printDebugGraphTransform(rtgraph, refHaplotype.getLocation() + "-sequenceGraph." + kmerSize + ".0.2.cleaned_readthreading_graph.dot");
-        }
+        dotFilePrinter.saveGraphIfDebugEnabled(rtgraph, "cleaned_readthreading_graph");
 
-        // Either return an assembly result with a sequence graph or with an unchanged sequence graph deptending on the kmer duplication behavior
+        // Either return an assembly result with a sequence graph or with an unchanged sequence graph depending on the kmer duplication behavior
         if (generateSeqGraph) {
             final SeqGraph initialSeqGraph = rtgraph.toSequenceGraph();
-            if (debugGraphTransformations) {
-                rtgraph.printGraph(new File(debugGraphOutputPath, refHaplotype.getLocation() + "-sequenceGraph." + kmerSize + ".0.3.initial_seqgraph.dot"), 10000);
-            }
 
-            // if the unit tests don't want us to cleanup the graph, just return the raw sequence graph
+            dotFilePrinter.saveGraphIfDebugEnabled(initialSeqGraph, "initial_seqgraph");
+
+            // if the unit tests don't want us to clean up the graph, just return the raw sequence graph
             if (justReturnRawGraph) {
                 return new AssemblyResult(AssemblyResult.Status.ASSEMBLED_SOME_VARIATION, initialSeqGraph, null);
             }
 
-            if (debug) {
-                logger.info("Using kmer size of " + rtgraph.getKmerSize() + " in read threading assembler");
-            }
-            if (debugGraphTransformations) {
-                printDebugGraphTransform(initialSeqGraph, refHaplotype.getLocation() + "-sequenceGraph." + kmerSize + ".0.4.initial_seqgraph.dot");
-            }
+            logDebugKmerSize(debug, rtgraph.getKmerSize());
+
             initialSeqGraph.cleanNonRefPaths(); // TODO -- I don't this is possible by construction
 
-            final AssemblyResult cleaned = cleanupSeqGraph(initialSeqGraph, refHaplotype);
+            final AssemblyResult cleaned = cleanupSeqGraph(initialSeqGraph, dotFilePrinter);
             final AssemblyResult.Status status = cleaned.getStatus();
             return new AssemblyResult(status, cleaned.getSeqGraph(), rtgraph);
 
         } else {
-
-            // if the unit tests don't want us to cleanup the graph, just return the raw sequence graph
+            // if the unit tests don't want us to clean up the graph, just return the raw sequence graph
             if (justReturnRawGraph) {
                 return new AssemblyResult(AssemblyResult.Status.ASSEMBLED_SOME_VARIATION, null, rtgraph);
             }
 
-            if (debug) {
-                logger.info("Using kmer size of " + rtgraph.getKmerSize() + " in read threading assembler");
-            }
+            logDebugKmerSize(debug, rtgraph.getKmerSize());
 
             final AssemblyResult cleaned = getResultSetForRTGraph(rtgraph);
             final AssemblyResult.Status status = cleaned.getStatus();
@@ -751,7 +745,7 @@ public final class ReadThreadingAssembler {
             graphWriter.println("digraph assemblyGraphs {");
             for ( final T graph : graphs ) {
                 if ( debugGraphTransformations && graph.getKmerSize() >= writeFirstGraphWithSizeSmallerThan ) {
-                    logger.info("Skipping writing of graph with kmersize " + graph.getKmerSize());
+                    logger.info("Skipping writing of graph with kmer size " + graph.getKmerSize());
                     continue;
                 }
 
@@ -797,6 +791,10 @@ public final class ReadThreadingAssembler {
         this.graphOutputPath = graphOutputPath;
     }
 
+    public void setEventMapOut(File graphOutputPath) {
+        this.graphOutputPath = graphOutputPath;
+    }
+
     public byte getMinBaseQualityToUseInAssembly() {
         return minBaseQualityToUseInAssembly;
     }
@@ -804,6 +802,18 @@ public final class ReadThreadingAssembler {
     public void setMinBaseQualityToUseInAssembly(byte minBaseQualityToUseInAssembly) {
         this.minBaseQualityToUseInAssembly = minBaseQualityToUseInAssembly;
     }
+
+	private void logDebugKmerSize(final boolean debug, final int kmerSize) { 
+      if (debug) {
+	    logger.info("Using kmer size of " + kmerSize + " in read threading assembler");
+      }
+	} 
+
+    private void logDebugNotUsingKmerSize(final boolean debug, final int kmerSize) {
+      if(debug) { 
+        logger.info( "Not using kmer size of " + kmerSize + " in read threading assembler because reference contains non-unique kmers"); 
+      }
+    }   
 
     public boolean isDebug() {
         return debug;
@@ -864,6 +874,80 @@ public final class ReadThreadingAssembler {
                 throw new UserException("Argument '--experimental-dangling-branch-recover' requires '--linked-de-bruijn-graph' to be set");
             }
             recoverHaplotypesFromEdgesNotCoveredInJunctionTrees = false;
+        }
+    }
+
+    // Debug output writer for the event map that ensures events are correctly sorted (even if there are cross region overlaps)
+    public static void addAssembledVariantsToEventMapOutput(final AssemblyResultSet untrimmedAssemblyResult, final Optional<PriorityQueue<VariantContext>> assembledEventMapVariants, final int maxMnpDistance, final Optional<VariantContextWriter> assembledEventMapVcfOutputWriter) {
+        assembledEventMapVariants.ifPresent(queue ->
+                untrimmedAssemblyResult.getVariationEvents(maxMnpDistance).forEach(event -> {
+                    if (queue.size() >= 300) {
+                        queue.stream().limit(200).forEachOrdered(vc -> assembledEventMapVcfOutputWriter.get().add(vc));
+                    }
+                    queue.add(event.convertToVariantContext("assembly"));}));
+    }
+
+    public AssemblyResultSet generateEmptyLLocalAssemblyResult(final AssemblyRegion assemblyRegion,
+                                              final Haplotype refHaplotype,
+                                              final byte[] fullReferenceWithPadding,
+                                              final SimpleInterval refLoc,
+                                              final LongHomopolymerHaplotypeCollapsingEngine haplotypeCollapsing
+                                              ) {
+
+        final AssemblyResultSet resultSet = new AssemblyResultSet();
+        resultSet.setRegionForGenotyping(assemblyRegion);
+        resultSet.setFullReferenceWithPadding(fullReferenceWithPadding);
+        resultSet.setPaddedReferenceLoc(refLoc);
+
+        final SimpleInterval activeRegionExtendedLocation = assemblyRegion.getPaddedSpan();
+        refHaplotype.setGenomeLocation(activeRegionExtendedLocation);
+        resultSet.add(refHaplotype);
+        resultSet.setHaplotypeCollapsingEngine(haplotypeCollapsing);
+
+        return resultSet;
+    }
+
+    /**
+     * Manage the printing of dot files and their naming convention, for example
+     * chr20:20-100-sequenceGraph.13.0.1.chain_pruned_read_threading_graph.dot
+     * chr20:20-100-sequenceGraph.13.0.2.cleaned_read_threading_graph.dot
+     * . . .
+     * chr20:20-100-sequenceGraph.13.1.0.non_ref_removed.dot,
+     * where 13 is the kmer size, and the following two numbers indicate broad categories (0 for the initial read threading
+     * de Bruijn graph, 1 for the later seq graph) and individual tags, respectively
+     * . . .
+     *
+     * This class automatically increments the section whenever a new graph is printed i.e. it switches from 0 to 1 once
+     * it is asked to print a transformation of the seq graph instead of the read threading graph
+     */
+    private class DotFilePrinter {
+        private int section = -1; // start at -1 because upon seeing the first graph it will be incremented to 0
+        private int subsection = 1;
+        private final String locationString;
+        private final int kmerSize;
+        private BaseGraph<?,?> lastGraphPrinted = null;
+
+        public DotFilePrinter(final Locatable location, final int kmerSize) {
+            locationString = location ==  null ? "" : IntervalUtils.locatableToString(location);
+            this.kmerSize = kmerSize;
+        }
+
+        // save the next file with the appropriate name, incrementing the subsection index
+        public void saveGraphIfDebugEnabled(final BaseGraph<?,?> graph, final String name) {
+            if (debugGraphTransformations) {
+                if (graph != lastGraphPrinted) {
+                    lastGraphPrinted = graph;
+                    section++;
+                    subsection = 0;
+                }
+                final String fileName = String.format("%s-sequenceGraph.%d.%d.%d.%s.dot", locationString, kmerSize, section, subsection++, name);
+                File outputFile = new File(debugGraphOutputPath, fileName);
+                if (PRINT_FULL_GRAPH_FOR_DEBUGGING) {
+                    graph.printGraph(outputFile, pruneFactor);
+                } else {
+                    graph.subsetToRefSource(10).printGraph(outputFile, pruneFactor);
+                }
+            }
         }
     }
 }
